--- a/rtsupport/src/app.css
+++ b/rtsupport/src/app.css
@@ -52,9 +52,9 @@
     flex-basis: 100%;
 }
 
-.active {
-    background-color: #E8E8E8;
-}
+/*.active {*/
+/*    background-color: #1d1d1d;*/
+/*}*/
 
 .timestamp {
     color: #808080;
